Better header, member etc. buttons.

--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -58,7 +58,7 @@ $colors: (
   autocomplete-select-bg: $blue,
 
   body-bg:                $white,
-  header-bg:              $white,
+  header-bg:              $brand,
   footer-bg:              $white,
   backdrop:               $grey-extra-light,
 
