--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -71,6 +71,10 @@
 .header {
   flex-flow: wrap;
 
+  @media (max-width: 555px) {
+    padding-block-start: calc(var(--gutters) + 1rem);
+  }
+
   &__site-name {
     font-size: var(--fs-xl);
     order: 1;
@@ -98,6 +102,10 @@
   font-weight: var(--fw-medium);
 }
 
+.wrap-any {
+  overflow-wrap: anywhere;
+}
+
 .box {
   box-shadow: 0px 4px 10px var(--color-black-20);
   border-width: 2px;
@@ -111,11 +119,6 @@
   a {
     color: var(--color-text-bg);
   }
-}
-
-.flex-group > *:last-child {
-  display: grid;
-  place-items: center;
 }
 
 div:has(> iframe) {
