--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   {{ $image = .Resize "1554x" -}}
 {{ end -}}
 <main class="main layout__main">
-<div class="front-bg-box stretch" style="--background-image-front-url: url({{ $image.RelPermalink }}); --background-image-front-height: {{ $image.Height }}px;">
+<div class="front-bg-box stretch" style="--background-image-front-url: url({{ $image.RelPermalink }});">
 <div class="flex-inline">
 <a class="button big mb--s" href="https://www.socialdemokraterna.se/bli-medlem">Bli medlem</a>
 <a class="button big mb--s" href="mailto:info@socialdemokraternakrokom.se">Skriv till oss</a>
