--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -31,6 +31,7 @@
 
 .front-bg-box {
   margin-block-start: var(--gutters);
+  background-color: var(--color-body-bg);
 
   h2 {
     font-size: var(--fs-xxl);
@@ -47,12 +48,13 @@
   @media (min-width: 666px) {
     --color-overlay: var(--color-black-40);
     --color-overlay2: var(--color-black-10);
-     --background-image-front-height: 600px;
+    --background-image-front-height: 600px;
 
     display: grid;
     align-content: center;
     margin-block-start: 0;
     color: var(--color-text-bg);
+    border-image: linear-gradient(var(--color-overlay), var(--color-overlay2)) fill 1;
     background-image: var(--background-image-front-url);
     background-repeat: no-repeat;
     background-size: cover;
