Fix front page more news button.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
 {{ end -}}
 
 {{ if gt (len (where site.RegularPages "Type" "in" site.Params.mainSections)) site.Params.frontposts -}}
-<p class="grid-center"><a class="button" href="/blog/">Se äldre inlägg</a></p>
+<p class="grid-center"><a class="button" href="/aktuellt/">Se äldre inlägg</a></p>
 {{ end -}}
 
 <div class="flex-group">
