New post repskap januari 2026.

--- a/layouts/list.html
+++ b/layouts/list.html
@@ -11,6 +11,6 @@
 {{ .Render "full" }}
 {{ end -}}
 
-{{ partial "pagination.html" . }}
+{{ partial "pagination-lite.html" . }}
 </main>
 {{ end -}}
